--- a/manifest.json
+++ b/manifest.json
@@ -6,11 +6,12 @@
   "background": {
     "service_worker": "background.js"
   },
-  "permissions": ["scripting","storage"],
+  "permissions": ["scripting","storage","tabs","nativeMessaging","activeTab"],
   "content_scripts": [
           {
              "matches": ["*://listado.mercadolibre.com.ar/*","*://www.mercadolibre.com.ar/*","*://*.mercadolibre.com.ar/*"],
-             "js": ["content.js"]
+             "js": ["content.js"],
+             "run_at": "document_start"
          }
      ],
   "action": {
